# backend/src/modules/chat/chat.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Get, Param, ParseIntPipe, Post, Query, Req, UseGuards } from "@nestjs/common";
+import { Body, Controller, Get, Param, Post, Query, UseGuards } from "@nestjs/common";
 import { CurrentUser } from "src/common/decorators/current-user.decorator";
 import { AccessTokenGuard } from "src/common/guards/access-token.guard";
 import type { AddUserToChatRequest, CreateChatRequest, SendMessageRequest } from "src/generated/type";
@@ -8,6 +8,7 @@ import { CreateChatCommand } from "./commands/create-chat.command";
 import { AddUsersToChatCommand } from "./commands/add-user-to-chat.command";
 import { SendMessageCommand } from "./commands/send-message.command";
 import { GetMessagesQuery } from "./queries/get-messages.query";
+import { GetChatsOfUserQuery } from "./queries/get-chats-of-user.query";
 
 @Controller('chats')
 export class ChatController {
@@ -25,6 +26,24 @@ export class ChatController {
     ) {
         const users = Array.from(new Set([user.sub, ...data.users]));
         return this.commandBus.execute(new CreateChatCommand(data.name ?? null, users));
+    }
+
+    @Get()
+    @UseGuards(AccessTokenGuard)
+    async getChatOfUser(
+        @CurrentUser() user: JwtPayload,
+        @Query('name') name?: string,
+        @Query('take') take?: string,
+        @Query('cursor') cursor?: string,
+    ) {
+        const parsedTake = take ? parseInt(take, 10) : 20;
+        const limit = Math.min(parsedTake, 50);
+        return this.queryBus.execute(new GetChatsOfUserQuery({
+            userId: user.sub,
+            name,
+            take: limit,
+            cursor,
+        }))
     }
 
     @Post(':chatId/users')
